--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -82,8 +82,9 @@
 .text-18px {
   color: #121417;
   font-feature-settings: 'dlig' on;
-  font-family: 'Inter', sans-serif;
+  font-family: Inter;
   font-size: 18px;
+  font-style: normal;
   font-weight: 700;
   line-height: 22.5px; /* 125% */
   letter-spacing: -0.27px;
@@ -111,8 +112,9 @@
 .text-14px {
   color: #121417;
   font-feature-settings: 'dlig' on;
-  font-family: 'Inter', sans-serif;
+  font-family: Inter;
   font-size: 14px;
+  font-style: normal;
   font-weight: 500;
   line-height: 21px; /* 150% */
 }
@@ -127,6 +129,17 @@
   letter-spacing: -0.8px;
 }
 
+.text-13px {
+  color: #637887;
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 19.5px; /* 150% */
+  letter-spacing: 0.195px;
+}
+
 .text-secondary-14px {
   color: #637887;
   font-feature-settings: 'dlig' on;
@@ -134,6 +147,17 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px; /* 150% */
+}
+
+.text-secondary-16px {
+  color: #637887;
+  text-align: center;
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
 }
 
 body {
