--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -171,3 +171,69 @@ body {
     text-wrap: balance;
   }
 }
+
+.table-header {
+  height: 45.5px;
+  padding: 12px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+  color: #121417;
+  /*font properties for table header*/
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 21px; /* 150% */
+  border: 1 px solid #E5E8EB;
+}
+
+.table-data {
+  width: 352.938px;
+  height: 72px;
+  padding: 8px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border: 1px solid #E5E8EB;
+}
+
+.left-table-data {
+  color: #121417;
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 150% */
+}
+
+.center-table-data {
+  color: #637887;
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px; /* 150% */
+}
+
+.right-table-data {
+  display: flex;
+  padding: 8px 16px;
+  width: 189.719px;
+  height: 32px;
+  border-radius: 12px;
+  background: #F0F2F5;
+}
+
+.table-general {
+  display: flex;
+  height: 431.5px;
+  padding: 12px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
