--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -140,6 +140,17 @@
   letter-spacing: 0.195px;
 }
 
+.text-24px {
+  color: #0d141c;
+  text-align: center;
+  font-feature-settings: 'dlig' on;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px; /* 125% */
+}
+
 .text-secondary-14px {
   color: #637887;
   font-feature-settings: 'dlig' on;
@@ -173,8 +184,8 @@ body {
 }
 
 @layer base {
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
